--- a/share.html
+++ b/share.html
@@ -33,7 +33,7 @@
   <div class="share-box">
     <h1>📢 Chia sẻ Game GunBot!</h1>
     <p>Bấm nút bên dưới để sao chép đường dẫn game và chia sẻ cho bạn bè.</p>
-    <input type="text" id="gameLink" value="https://yourdomain.com/game.html" readonly style="width: 100%; padding: 10px;">
+    <input type="text" id="gameLink" value="https://vutao2k8.github.io/Gunbot/" readonly style="width: 100%; padding: 10px;">
     <button onclick="copyLink()">📋 Sao chép liên kết</button>
     <p id="status" style="color: green; margin-top: 10px;"></p>
   </div>
