--- a/audio.html
+++ b/audio.html
@@ -5,7 +5,7 @@
   <title>GunBot - Nhạc nền</title>
 </head>
 <body>
-  <audio id="bgMusic" src="sounds/menu.mp3" autoplay loop></audio>
+  <audio id="bgMusic" src="sounds/menu-music.mp3" autoplay loop></audio>
 
   <script>
     const music = document.getElementById("bgMusic");
