--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gunbot - login</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" type="image/png" href="assets/images/logoweb.png">
+  <link rel="icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
   <!-- Ảnh tiêu đề game -->
